--- a/css/banner.css
+++ b/css/banner.css
@@ -1,9 +1,9 @@
 /* Banner superior fijo y delgado */
 .top-banner{ position:fixed; top:0; left:0; right:0; height:18px;
-  background:#000;
+  background:#fff;
   overflow:hidden;
   z-index:9999;
-  border-bottom:1px solid rgba(255,255,255,.08);
+  border-bottom:1px solid rgba(0,0,0,.08);
 }
 @media(min-width:768px){ .top-banner{ height:21px; } }
 
